# grimperium_V2

./: .gitignore  .pre-commit-config.yaml  00_LEIA_PRIMEIRO.txt  01_START_HERE(2).md  02_PROMPT_001_SCAFFOLDING_INICIAL.md  03_RESUMO_EXECUTIVO.md  04_INSTRUCOES_CLAUDE_CODE.md  05_DECISIONS_FINAL.md  06_DATASET_DELTA_STRATEGY.md  AGENTS.md  CHANGELOG.md  CI_ERROR_SUMMARY.md  CLAUDE_CODE_PROMPT.md  CONTEXT.md  EXECUTIVE_SUMMARY.md  FILE_1_paths.py  FILE_2_logging_enhancements.py  FILE_3_csv_manager_enhancements.py  IMPLEMENTATION_NOTES.md  LICENSE  MOPAC Error message.txt  PHASE_A_COMPLETION.md  PRACTICAL_EXAMPLES.md  QUICK_REFERENCE.txt  README.md  README_IMPLEMENTATION.md  README_START_HERE.md  ROUND3-IMPLEMENTATION-SUMMARY.md  TECHNICAL_REPORT.md  diagnose_pm7.py  grimperium_context_for_claude.md  grimperium_final_checklist.md  grimperium_implementation_guide.md  grimperium_spec.md  pyproject.toml  tox.ini
.archive/: TECHNICAL_REPORT.md
.archive/READMEs/: README_data.md  README_utils.md
.claude/: CHANGELOG_TEMPLATE.md  DEVELOPMENT_PROCEDURES.md  README.md  settings.json  settings.json.bak.20260117_181656
.claude/skills/: grimperium-ci.md  grimperium-docs.md  grimperium-format.md  grimperium-tests.md
.github/scripts/: generate_ci_report.py
.github/workflows/: ci.yml
.serena/: project.yml
.serena/memories/: project_overview.md  style_conventions.md  suggested_commands.md  task_completion.md
READMEs/: README.md  README_core.md  README_models.md  README_utils.md
data/: .~lock.thermo_cbs_clean.csv#
docs/: ARCHITECTURE.md  CLAUDE.md  CREST_INTEGRATION.md  DATASETS.md  DATASET_MIGRATION.md  FIXES-2026-01-13.md  FIXES-ROUND2-SUMMARY.md  FIXES-ROUND3-COMPLETE.md  MOPAC_INTEGRATION.md  PHASE-A-RESULTS.md  PHASE-A-START-HERE.md  RDKIT_INTEGRATION.md  TESTING-GUIDE-ROUND2.md  TESTING_GUIDE.md  WORKFLOW.md  architecture.md  dataset_analysis.md  delta_learning_guide.md  feature_engineering.md  phase-a-fixes-implementation-notes.md
docs/plans/: 2026-01-03-breezy-puzzling-ladybug.md  2026-01-05-real-dataset-integration.md  2026-01-06-replicated-nibbling-gray.md  2026-01-06-vast-spinning-sun.md  2026-01-09-delegated-yawning-rose.md  2026-01-12-piped-dancing-flurry.md  2026-01-13-nested-drifting-quokka.md  2026-01-20-phase-a-dataset-cli-refinements.md  2026-01-20-phase-a-fixes-integration.md  magical-napping-moonbeam.md  whimsical-yawning-hippo.md
docs/source/: conf.py  grimperium.core.rst  grimperium.data.rst  grimperium.models.rst  grimperium.rst  grimperium.utils.rst  index.rst  modules.rst
scripts/: filter_chon_only.py  generate-docs.sh  init_batch_csv.py  migrate_conformer_details.py  phase_a_quick_test.py  test_phase_a.sh  verify_round3_fixes.py
scripts/benchmarks/: reproduce_batch3.py
scripts/utils/: baseline_validator.py
src/grimperium/: __init__.py  api.py  config.py
tests/: __init__.py  conftest.py  test_config.py  test_csv_enhancements_batch_settings.py  test_csv_schema.py  test_settings_phase_a.py
tests/experiments/: __init__.py  conftest.py  test_stress_distribution_shift.py  test_validate_hypothesis.py
tests/fixtures/: __init__.py  conftest.py  mock_data.py  real_data.py
tests/integration/: __init__.py  test_batch6_cleanup.py  test_data_fusion.py  test_full_pipeline.py  test_integration.py  test_pipeline.py
tests/unit/: __init__.py  test_artifact_manager_sanitization.py  test_batch_orchestrator.py  test_batch_scheduler.py  test_calc_view.py  test_crest_pm7_models.py  test_csv_data_loader.py  test_csv_manager.py  test_csv_schema.py  test_databases_view.py  test_dataset_manager.py  test_delta_learning.py  test_fusion.py  test_loader.py  test_mock_data.py  test_models.py  test_molecule.py  test_preoptimization.py  test_progress_tracker_v2.py  test_semiempirical.py  test_settings_manager.py  test_settings_manager_batch10.py  (+4 more)
(+78 files in other folders)
