[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "grimperium"
version = "0.2.0"
description = "ML Ensemble Framework for Molecular Thermodynamic Property Prediction with Delta-Learning"
authors = ["Grimperium Team"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/grimperium/grimperium"
repository = "https://github.com/grimperium/grimperium"
documentation = "https://grimperium.readthedocs.io"
keywords = ["machine-learning", "chemistry", "thermodynamics", "delta-learning", "molecular-properties"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
packages = [{include = "grimperium", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = ">=1.24.0"
pandas = ">=2.0.0"
scikit-learn = ">=1.3.0"
xgboost = ">=2.0.0"
sphinx = {version = ">=7.0,<8.0", optional = true}
sphinx-rtd-theme = {version = ">=2.0,<3.0", optional = true}
sphinx-autodoc-typehints = {version = ">=1.24,<2.0", optional = true}
pdoc = {version = "^14.0.0", optional = true}

[tool.poetry.group.chemistry.dependencies]
rdkit = {version = ">=2023.9.0", python = "<3.13", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-xdist = "^3.3.0"
mypy = "^1.5.0"
ruff = "^0.1.0"
black = "^23.9.0"
pre-commit = "^3.4.0"
tox = "^4.11.0"

[tool.poetry.extras]
docs = ["pdoc", "sphinx", "sphinx-rtd-theme", "sphinx-autodoc-typehints"]

[tool.poetry.scripts]
grimperium = "grimperium.api:main"

[tool.ruff]
target-version = "py39"
line-length = 88
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without strict parameter
    "ARG001", # unused function argument (common in stubs)
]

[tool.ruff.per-file-ignores]
"tests/**/*" = ["ARG", "S101"]
"__init__.py" = ["F401"]

[tool.ruff.isort]
known-first-party = ["grimperium"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src/grimperium"]
branch = true
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
show_missing = true
